--- a/src/app.css
+++ b/src/app.css
@@ -17,7 +17,7 @@ html, body, #svelte {
   display: none;
 }
 
-@media screen and (max-width: 5em) {
+@media screen and (max-width: 800px) {
   .show-on-small-screen {
     display: block;
   }
