--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,7 @@
 :root {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
+  line-height: 1.4rem;
 }
 
 html, body, #svelte {
